--- a/style.css
+++ b/style.css
@@ -41,3 +41,11 @@ button:hover{
     background: hsla(54, 89%, 37%, 0.808);
     transition: all;
 }
+#result {
+    border-radius: .3rem;
+    height: 30px;
+    width: 80%;
+    background: #ffffff;
+    text-align: center;
+    display: none;
+}
